--- a/apps/cron/deno.json
+++ b/apps/cron/deno.json
@@ -8,11 +8,12 @@
     "@twidro/consts": "../../packages/consts/index.ts",
     "@types/jsdom": "npm:@types/jsdom@^21.1.7",
     "chalk": "npm:chalk@^5.6.2",
-    "hono": "npm:hono@^4.7.10",
+    "hono": "npm:hono@^4.9.12",
     "jsdom": "npm:jsdom@^26.1.0"
   },
   "unstable": [
     "kv",
-    "cron"
+    "cron",
+    "sloppy-imports"
   ]
 }
